--- a/Basic/끝말잇기.html
+++ b/Basic/끝말잇기.html
@@ -5,10 +5,10 @@
     <title>끝말잇기</title>
 </head>
 <body>
-    <div><span id="order">1</span>번째 참가자</div>
-    <div>제시어: <span id="word"></span></div>
-    <input type="text">
-    <button>입력</button>
+<div><span id="order">1</span>번째 참가자</div>
+<div>제시어: <span id="word"></span></div>
+<input type="text">
+<button>입력</button>
 
 <script>
     const number = parseInt(prompt('몇 명이 참가하나요?'))
@@ -18,13 +18,39 @@
 
     // document.querySelector('#order') // document.querySelector('#선택자id') , .(클래스)
 
-    // addEventListener : 이벤트를 달 때 사용하는 메서드
-    document.querySelector('input').addEventListener('input', function (e) {
-        console.log('input: ', e.target.value)
-    })
-    document.querySelector('button').addEventListener('button', function () {
+    // addEventListener : 이벤트를 달 때 사용하는 메서드 = 리스너 함수 = 콜백 함수
+    const $input = document.querySelector('input')
+    const $button = document.querySelector('button')
+    const $word = document.querySelector('#word')
+    const $order = document.querySelector('#order')
+    let word; // 제시어
+    let newWord; // 새로 입력한 단어
 
-    })
+    const onInput = (e) => {
+        console.log('input: ', e.target.value)
+        newWord = e.target.value
+    }
+    const onClickButton = () => {
+        if (!word || word[word.length - 1] === newWord[0]) { // 제시어가 비어있는가? || 단어가 올바른가?
+            // 비어있으면 = 첫번째 참가자
+            word = newWord // 입력한 단어가 제시어가 된다
+            $word.textContent = word // 화면에 제시어 표시
+            const order = Number($order.textContent) // 현재 순서, 태그.textContent 는 태그 내부의 문자를 가져옴
+            if (order === number) { // 마지막 순번 일 경우 1번째로 되돌아간다
+                $order.textContent = 1 // 태그 내부의 문자를 해당 값으로 설정
+            } else {
+                $order.textContent = order + 1
+            }
+        } else {
+            // 올바르지 않은가
+            alert('올바른 단어가 아닙니다')
+        }
+        $input.value = ''; // input, select, textarea 등이 아닌 일반 태그들은 value가 아니라 태그.textContent 속성 사용
+        $input.focus()
+    }
+
+    $input.addEventListener('input', onInput)
+    $button.addEventListener('click', onClickButton)
 </script>
 </body>
 </html>
